<resources>
    <string name="app_name">Remember</string>
    <string name="title_medicine_name">Name of medicine</string>
    <string name="hint_enter_med_name">Enter the medicine</string>
    <string name="medicine_days">Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">hour</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">You added the medicine successfully</string>
    <string name="reminder_message">Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="title_activity_maps">Map</string>

    <string name="icon_jurnal"></string>
    <string name="icon_joc"></string>
    <string name="icon_galerie"></string>
    <string name="icon_alarme"></string>
    <string name="icon_acasa"></string>
    <string name="icon_urgente"></string>
    <string name="icon_grafic"></string>
    <string name="icon_pastila"></string>
    <string name="icon_locatie"></string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_today">Today</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_tomorrow">Tomorrow</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="str_btn_set_alarm">Save</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_tv_message">Opened by Alarm</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="pill_name">Enter the name of the medicine</string>

    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_edit">edit</string>
    <string name="desc">The graph represents the results of your loved one at the memory game, based on tests designed in clinics. Each point represents the number of seconds a game was completed.</string>
    >


    <string name="ob_header1">EASE YOUR LIFE</string>
    <string name="ob_header2">MONITOR YOUR MEDICATION</string>
    <string name="ob_header3">Do you have an emergency or are you lost?</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_desc1">Use our feature package for your everyday life</string>
    <string name="ob_desc2">We set you alarms so you never forget when to take your medication</string>
    <string name="ob_desc3">We help you get home safely and contact the people who can help you</string>
    <string name="title_activity_test_il_sterg_imediat">test_il_sterg_imediat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
