<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainMenu">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/round_button"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:id="@+id/note"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_jurnal"
                android:textSize="60sp"
                android:id="@+id/icon_jurnal"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Write down"
                android:fontFamily="sans-serif-medium"
                android:textSize="25sp"
                />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/round_button"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:id="@+id/despre_mine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_joc"
                android:textSize="60sp"
                android:id="@+id/icon_joc"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Play"
                android:fontFamily="sans-serif-medium"
                android:textSize="25sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:background="@drawable/round_button"
            android:id="@+id/galerie">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_galerie"
                android:textSize="60sp"
                android:id="@+id/icon_galerie"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Memories"
                android:fontFamily="sans-serif-medium"
                android:textSize="25sp"
                />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/round_button"
            android:id="@+id/alarme">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_alarme"
                android:textSize="60sp"
                android:id="@+id/icon_alarme"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Take your pills"
                android:fontFamily="sans-serif-medium"
                android:textSize="25sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:id="@+id/locatie"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_acasa"
            android:textSize="60sp"
            android:id="@+id/icon_acasa"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Take me Home"
            android:fontFamily="sans-serif-medium"
            android:textSize="25sp"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_red"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:id="@+id/urgenta"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_urgente"
            android:textSize="60sp"
            android:textColor="#FFFFFF"
            android:id="@+id/icon_urgente"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#FFFFFF"
            android:text="Emergency"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"
            />

    </LinearLayout>

</LinearLayout>