<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Tutore.TutoreMain">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"/>


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_margin="10dp"
        android:gravity="center">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:elevation="5dp"
            android:background="@drawable/round_button"
            android:id="@+id/medicineCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_pastila"
                android:textSize="60sp"
                android:id="@+id/icon_pastila"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Medicine"
                android:fontFamily="sans-serif-medium"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/round_button"
            android:id="@+id/progressCheck">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_grafic"
                android:id="@+id/icon_grafic"
                android:textSize="60sp" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Graph"
                android:fontFamily="sans-serif-medium"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_button"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:id="@+id/locationCheck"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_locatie"
            android:id="@+id/icon_locatie"
            android:textSize="60sp" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Check location"
            android:fontFamily="sans-serif-medium"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeStepGranularity="2sp"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_button_red"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:id="@+id/stopalert"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_urgente"
            android:id="@+id/icon_urgente"
            android:textSize="60sp"
            android:textColor="#FFFFFF" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Pacientul are o urgenta!"
            android:fontFamily="sans-serif-medium"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeStepGranularity="2sp"
            />

    </LinearLayout>

</LinearLayout>